@@ -143,7 +143,8 @@ DFHACK_EXPORT bool checkFreeTiles(df::coord pos, df::coord2d size,
                                   df::building_extents *ext = NULL,
                                   bool create_ext = false,
                                   bool allow_occupied = false,
-                                  bool allow_wall = false);
+                                  bool allow_wall = false,
+                                  bool allow_flow = false);
 
 /**
  * Returns the number of tiles included by the extent, or defval.
